<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rosidl_generator_rs</name>
  <version>0.0.4</version>
  <description>Generate the ROS interfaces in Rust.</description>
  <maintainer email="esteve@apache.org">Esteve Fernandez</maintainer>
  <license>Apache License 2.0</license>
  <author email="esteve@apache.org">Esteve Fernandez</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <buildtool_depend>rosidl_runtime_rs</buildtool_depend>

  <buildtool_export_depend>ament_cmake</buildtool_export_depend>
  <buildtool_export_depend>rosidl_cmake</buildtool_export_depend>
  <buildtool_export_depend>rosidl_runtime_rs</buildtool_export_depend>
  <buildtool_export_depend>rosidl_typesupport_c</buildtool_export_depend>
  <buildtool_export_depend>rosidl_typesupport_interface</buildtool_export_depend>

  <!-- This is needed for the rosidl_message_type_support_t struct and visibility macros -->
  <build_export_depend>rosidl_generator_c</build_export_depend>

  <exec_depend>rosidl_parser</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>rosidl_cmake</test_depend>
  <test_depend>rosidl_generator_c</test_depend>

  <member_of_group>rosidl_generator_packages</member_of_group>
  <member_of_group>rosidl_runtime_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
