[package]
name = "rosidl_runtime_rs"
version = "0.3.1"
# This project is not military-sponsored, Jacob's employment contract just requires him to use this email address
authors = ["Esteve Fernandez <esteve@apache.org>", "Nikolai Morin <nnmmgit@gmail.com>", "Jacob Hassold <jacob.a.hassold.civ@army.mil>"]
edition = "2021"
license = "Apache-2.0"
description = "Message generation code shared by Rust projects in ROS 2"

[lib]
path = "src/lib.rs"

# Please keep the list of dependencies alphabetically sorted,
# and also state why each dependency is needed.
[dependencies]
# Optional dependency for making it possible to convert messages to and from
# formats such as JSON, YAML, Pickle, etc.
serde = { version = "1", optional = true }

[dev-dependencies]
# Needed for writing property tests
quickcheck = "1"
# Needed for testing serde support
serde_json = "1"
