[package]
name = "rosidl_runtime_rs"
version = "0.4.1"
# This project is not military-sponsored, Jacob's employment contract just requires him to use this email address
authors = ["Esteve Fernandez <esteve@apache.org>", "Nikolai Morin <nnmmgit@gmail.com>", "Jacob Hassold <jacob.a.hassold.civ@army.mil>"]
edition = "2021"
license = "Apache-2.0"
description = "Message generation code shared by Rust projects in ROS 2"

[lib]
path = "src/lib.rs"

# Please keep the list of dependencies alphabetically sorted,
# and also state why each dependency is needed.
[dependencies]
# Optional dependency for making it possible to convert messages to and from
# formats such as JSON, YAML, Pickle, etc.
serde = { version = "1", optional = true }

[features]
default = []
# This feature is solely for the purpose of being able to generate documetation without a ROS installation
# The only intended usage of this feature is for docs.rs builders to work, and is not intended to be used by end users
generate_docs = []

[dev-dependencies]
# Needed for writing property tests
quickcheck = "1"
# Needed for testing serde support
serde_json = "1"

[build-dependencies]
# Needed for uploading documentation to docs.rs
cfg-if = "1.0.0"

[package.metadata.docs.rs]
features = ["generate_docs"]
